added in apploader script to index

--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
     <div class="skinHeader"></div>
     <div class="mainAnimatedPages skinBody"></div>
     <div class="mainDrawerHandle"></div>
+    <script>window.dashboardVersion='10.2.2';</script><script src="scripts/apploader.js?v=10.2.2" defer></script>
 </body>
 </html>
